
pythonpath = ["src", "/home/vulpski/projects/fundamentals/data-structures/python/"]

[tool.poetry]
name = "547-num-provinces"
version = "0.1.0"
package-mode = false
description = "A solution to LeetCode 547-num-provinces"
authors = ["David Linkowski <david.linkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.0"
black = "^24.3"
# use a broad isort constraint to avoid strict resolution failures across indexes
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.7"
pre-commit = "^3.4"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "/home/vulpski/projects/fundamentals/data-structures/python/trees/"]

